[package]
name = "is_boxer_like"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
eframe = "0.21.3"
egui = "0.21.0"
ron = "0.8.0"
serde = "1.0.160"
windows = { path = "./src/windows" }
